# BrambleWars

./: .gitignore  README.md  config.lua  main.lua  weapon_blueprints.lua
client-lua/: conf.lua  config.lua  main.lua
data/: attack_blueprints.lua  character_blueprints.lua  class_blueprints.lua  enemy_blueprints.lua  entities.lua  object_blueprints.lua  passive_blueprints.lua  summon_blueprints.lua  tile_status_blueprints.lua  unit_attacks.lua  weapon_blueprints.lua
maps/: DefaultMap.lua  GBCMap.lua
modules/: assets.lua  attack_handler.lua  attack_patterns.lua  battle_info_menu.lua  camera.lua  combat_actions.lua  combat_formulas.lua  effect_factory.lua  input_handler.lua  live_combat_display.lua  main_menu.lua  pathfinding.lua  promotion_menu.lua  range_calculator.lua  range_logic.lua  renderer.lua  rescue_handler.lua  shop_menu.lua  shove_handler.lua  status_effect_manager.lua  take_handler.lua  unit_info_menu.lua  world.lua  world_queries.lua
protos/: auction.pb  auction.proto
server-rust/: Cargo.toml  build.rs
server-rust/src/: auction_handler.rs  lib.rs  main.rs  message_handler.rs  message_handlers.rs  websocket_handler.rs
systems/: action_finalization_system.lua  action_menu_preview_system.lua  aetherfall_system.lua  animation_effects_system.lua  ascension_system.lua  attack_resolution_system.lua  battle_info_system.lua  bloodrush_system.lua  careening_system.lua  counter_attack_system.lua  death_system.lua  effect_timer_system.lua  enemy_turn_system.lua  environment_hazard_system.lua  exp_bar_renderer_system.lua  grapple_hook_system.lua  (+17 more)
(+97 files in other folders)
