[package]
name = "BrambleWarsServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["ws", "macros"]}
tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3.31"
prost = "0.14.1"
uuid = { version = "1.18.0", features = ["v7"] }

[build-dependencies]
prost-build = "0.14.1"
